Adding criterium tests + pi monte carlo